--- a/index.html
+++ b/index.html
@@ -73,19 +73,17 @@
             <hr class="bottom-line">
           </div>
           
-          <div class="contenedor">
-            <div class="col-md-3 col-sm-6 col-xs-12 padding-right-zero mr-btn-15 lider-xd">
-              <figure>
-                <img src="img/fotocara.jpg" class="img-responsive" alt="">
-              <figcaption>
-                <h2>José Chi Quintal</h2>
-                <p>Amo,rey y señor del mundo</p>
-              </figcaption>
-              </figure>
-          </div>
-        </div>
+          <div class="container">
 
-
+        <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
+          <figure>
+            <img src="img/fotocara.jpg" class="img-responsive" alt="">
+          <figcaption>
+            <h2>Pablo Gamboa</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </figcaption>
+          </figure>
+      </div>
           <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
             <figure>
               <img src="img/fotocara.jpg" class="img-responsive" alt="">
@@ -127,6 +125,7 @@
     </section>
     <!---->
     <!---->
+    
     <section id="testimonial" class="wow fadeInUp delay-05s">
       <div class="bg-testicolor">
         <div class="container section-padding">
