--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <hr class="bottom-line">
           </div>
           
-          <div class="container">
+         <div class="container">
 
-        <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
+        <div class=" col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
           <figure>
             <img src="img/fotocara.jpg" class="img-responsive" alt="">
           <figcaption>
