--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <div class=" col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
           <figure>
-            <img src="img/fotocara.jpg" class="img-responsive" alt="">
+            <img src="img/pablo.jpeg" class="img-responsive" alt="">
           <figcaption>
             <h2>Pablo Gamboa</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -134,10 +134,17 @@
               <ul class="bxslider">
                 <li>
                   <blockquote>
-                    <img src="img/thumb.png" class="img-responsive">
-                    <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another. </p>
+                    <small>Dirección MAC en Windows</small>
+                    <p>
+                      1. Pulse la combinación de teclas <I>Windows + R</I>
+                      <br>
+                      2. En la pestaña de ejecutar escriba "<I>cmd</I> "
+                      <br>
+                      3. Escriba "<I>ipconfig/all</I> " en la linea de comando
+                      <br>
+                      4. Su dirección se encuntra en el apartado "<I>Dirección física</I> "                
+                    </p>
                   </blockquote>
-                  <small>Shaun Paul, Client</small>
                 </li>
                 <li>
                   <blockquote>
