--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <img src="img/pablo.jpeg" class="img-responsive" alt="">
           <figcaption>
             <h2>Pablo Gamboa</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Estudiante de primer semestre de la Licenciatura en Ingeniería de Software, Miembro del equipo mas verga de cambranes, apasionado por el deporte y la programación.</p>
           </figcaption>
           </figure>
       </div>
