--- a/index.html
+++ b/index.html
@@ -148,17 +148,27 @@
                 </li>
                 <li>
                   <blockquote>
-                    <img src="img/thumb.png" class="img-responsive">
-                    <p>So here is us, on the raggedy edge. Don't push me, and I won't push you. </p>
+                    <small>Dirección MAC en Mac (Apple)</small>
+                    <p>
+                      1. Abrir el panel de preferencias de red
+                      <br>
+                      2. Ir a la pestaña de "<I>avanzado</I> "
+                      <br>
+                      3. La dirección se encuentra en la pestaña de hardware              
+                    </p>
                   </blockquote>
-                  <small>Marry Smith, Client</small>
                 </li>
                 <li>
                   <blockquote>
-                    <img src="img/thumb.png" class="img-responsive">
-                    <p>Come a day there won't be room for naughty men like us to slip about at all. This job goes south, there well may not be another.</p>
+                    <small>Dirección MAC en Mac (Apple)</small>
+                    <p>
+                      1. Entrar a la consola del sistema
+                      <br>
+                      2. Escribir "<I>ifconfig</I> "
+                      <br>
+                      3. La dirección se encuentra en el campo "<I>HWaddr</I> "            
+                    </p>
                   </blockquote>
-                  <small>Vivek Singh, Client</small>
                 </li>
                 <li>
                   <blockquote>
