--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </li>
                 <li>
                   <blockquote>
-                    <small>Dirección MAC en Mac (Apple)</small>
+                    <small>Dirección MAC en Linux</small>
                     <p>
                       1. Entrar a la consola del sistema
                       <br>
