--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <figure>
               <img src="img/fotocara.jpg" class="img-responsive" alt="">
             <figcaption>
-              <h2>Pablo Gamboa</h2>
+              <h2>José de Jesús Chi Quintal</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             </figcaption>
             </figure>
