--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <li class="active"><a href="#main-header">Inicio</a></li>
                   <li class=""><a href="#feature">Nosotros</a></li>
                   <li class=""><a href="#service">Skill</a></li>
-                  <li class=""><a href="#portfolio">Ayuda</a></li>
+                  <li class=""><a href="#ayuda">Ayuda</a></li>
                   <li class=""><a href="#contact">Contactanos</a></li>
                 </ul>
               </div>
@@ -121,12 +121,19 @@
     </section>
     <!---->
     <!----> 
-    <section id="testimonial" class="wow fadeInUp delay-05s">
+    <section id="ayuda" class="wow fadeInUp delay-05s">
       <div class="bg-testicolor">
         <div class="container section-padding">
           <div class="row">
             <div class="testimonial-item">
               <ul class="bxslider">
+                <li>
+                  <blockquote>
+                    <img src="img/thumb.png" class="img-responsive">
+                    <p>So here is us, on the raggedy edge. Don't push me, and I won't push you.</p>
+                  </blockquote>
+                  <small>John Doe, Client</small>
+                </li>
                 <li>
                   <blockquote>
                     <small>Dirección MAC en Windows</small>
