--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <li class=""><a href="#feature">Nosotros</a></li>
                   <li class=""><a href="#service">Skill</a></li>
                   <li class=""><a href="#ayuda">Ayuda</a></li>
-                  <li class=""><a href="#contact">Aviso de privacidad</a></li>
+                  <li class=""><a target="blank" href="#contact">Aviso de privacidad</a></li>
                 </ul>
               </div>
             </div>
