--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <li class=""><a href="#feature">Nosotros</a></li>
                   <li class=""><a href="#service">Skill</a></li>
                   <li class=""><a href="#ayuda">Ayuda</a></li>
-                  <li class=""><a target="_blank" href="">Aviso de privacidad</a></li>
+                  <li class="https://github.com/JoseCQUADY/P-gina-Escolar/blob/master/Aviso%20de%20privacidad.html"><a target="_blank" href="">Aviso de privacidad</a></li>
                 </ul>
               </div>
             </div>
