--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
-                <div class="amazonbtn">
-              <img alt = "Iniciar sesión con Amazon" src = "https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png" width=156  height =32 />
-                </div>
-          
+                  <a href id="LoginWithAmazon">
+                    <img border ="0" alt="Login with Amazon"
+                        src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
+                        width="156" height="32" />
+                   </a>
               </div>
             </div>
           </div>
