--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
  
  </script>
 
+<script type="text/javascript">
+  document.getElementById('LoginWithAmazon').onclick = function() {
+      options = {}
+      options.scope = 'profile';
+      options.scope_data = {
+          'profile' : {'essential': false}
+      };
+      amazon.Login.authorize(options,
+          'https://ouroboroswol.tk/handle_login.php');
+      return false;
+  };
+</script>
 
 
   <div class="loader"></div>
