--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   
-  <div id="amazon-root"></div>
+  <div id="amazon-root">
   <script type="text/javascript">
  
      window.onAmazonLoginReady = function() {
@@ -285,5 +285,7 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
+
+</div>
 </body>
 </html>
