--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  <div id="amazon-root"></div>
   <script type="text/javascript">
  
      window.onAmazonLoginReady = function() {
@@ -42,7 +43,7 @@
   };
 </script>
 
-<div id="amazon-root">
+
   <div class="loader"></div>
   <div id="myDiv">
     <!--HEADER-->
@@ -281,6 +282,5 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
-</div>
 </body>
 </html>
