--- a/index2.html
+++ b/index2.html
@@ -42,7 +42,7 @@
                   <li class=""><a href="#service">Skill</a></li>
                   <li class=""><a href="#ayuda">Ayuda</a></li>
                   <li class=""><a target="_blank" href="aviso_privacidad.html">Aviso de privacidad</a></li>
-                  <li class=""><a id="Logout" target="_blank" href="aviso_privacidad.html">Cerrar Sesión</a></li>
+                  <li class=""><a id="Logout">Cerrar Sesión</a></li>
                   <script type="text/javascript">
                     document.getElementById('Logout').onclick function() { 
                        amazon.Login.logout();
