--- a/index2.html
+++ b/index2.html
@@ -42,12 +42,13 @@
                   <li class=""><a href="#service">Skill</a></li>
                   <li class=""><a href="#ayuda">Ayuda</a></li>
                   <li class=""><a target="_blank" href="aviso_privacidad.html">Aviso de privacidad</a></li>
-                  <li class=""><a id="Logout">Cerrar Sesión</a></li>
+                  <li class=""><a id="Logout" href="" >Cerrar Sesión</a></li>
                   <script type="text/javascript">
                     document.getElementById('Logout').onclick function() { 
                        amazon.Login.logout();
                     };
                   </script>
+
                 </ul>
               </div>
             </div>
@@ -57,6 +58,9 @@
           <div class="container">
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
+                <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
+              
+
                   </div>
             </div>
           </div>
