--- a/index2.html
+++ b/index2.html
@@ -180,12 +180,12 @@
     <!---->
     <section  class="direcciones">
      <div class="Contenedor">
-      <h1>Nombre del dispositivo</h1>>
-     <input type="text" id="direccionmac">
+    <h1>Nombre del dispositivo</h1>
+    <input type="text" id="device">
      <br>
      <h1>Dirección Mac</h1>
-      <input type="text" id="direccionmac">
-    
+    <input type="text" id="direccionmac">
+    <br>
      <input type="submit">
     </div>
     
