--- a/index2.html
+++ b/index2.html
@@ -179,7 +179,7 @@
   
     <!---->
     <section  class="direcciones">
-     <div class="Contenedor">
+     <div class="contenedor">
     <h1>Nombre del dispositivo</h1>
     <input type="text" id="device">
      <br>
