--- a/index.html
+++ b/index.html
@@ -88,59 +88,16 @@
         </div>
       </div>
     </div>
-    <section id="feature" class="section-padding wow fadeInUp delay-05s">
+    <!---->
+    <!----> 
+    <section id="parallax1" class="home-section parallax text-light" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center">
-            <h2 class="service-title pad-bt15">¡Conoce a nuestro equipo!</h2>
-            <hr class="bottom-line">
+          <div class="col-md-12">
+            <div class="text-center">
+              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">We start from pixel perfect pattern</h2>
+            </div>
           </div>
-         <div class="container">
-        <div class=" col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
-          <figure>
-            <img src="img/pablo.jpeg" class="img-responsive" alt="">
-          <figcaption>
-            <h2>Pablo Gamboa</h2>
-            <p>Estudiante de primer semestre de la Licenciatura en Ingeniería de Software, Miembro del equipo mas verga de cambranes, apasionado por el deporte y la programación.</p>
-          </figcaption>
-          </figure>
-      </div>
-          <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/fotocara.jpg" class="img-responsive" alt="">
-            <figcaption>
-              <h2>José de Jesús Chi Quintal</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </figcaption>
-            </figure>
-        </div>
-          <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
-            <figure>
-              <img src="img/arreola.jpeg" class="img-responsive" alt="">
-            <figcaption>
-              <h2><span>Diego Arreola</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            </figcaption>
-            </figure>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
-          <figure>
-            <img src="img/fotocara.jpg" class="img-responsive" alt="">
-          <figcaption>
-            <h2><span>Diego Alamilla</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </figcaption>
-          </figure>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15 ">
-        <figure>
-          <img src="img/fotocara.jpg" class="img-responsive" alt="">
-        <figcaption>
-          <h2><span>Abraham Cruz</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </figcaption>
-        </figure>
-    </div>
         </div>
       </div>
     </section>
