--- a/index.html
+++ b/index.html
@@ -88,6 +88,62 @@
         </div>
       </div>
     </div>
+    <section id="feature" class="section-padding wow fadeInUp delay-05s">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 text-center">
+            <h2 class="service-title pad-bt15">¡Conoce a nuestro equipo!</h2>
+            <hr class="bottom-line">
+          </div>
+         <div class="container">
+        <div class=" col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
+          <figure>
+            <img src="img/pablo.jpeg" class="img-responsive" alt="">
+          <figcaption>
+            <h2>Pablo Gamboa</h2>
+            <p>Estudiante de primer semestre de la Licenciatura en Ingeniería de Software, Miembro del equipo mas verga de cambranes, apasionado por el deporte y la programación.</p>
+          </figcaption>
+          </figure>
+      </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/fotocara.jpg" class="img-responsive" alt="">
+            <figcaption>
+              <h2>José de Jesús Chi Quintal</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </figcaption>
+            </figure>
+        </div>
+          <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
+            <figure>
+              <img src="img/arreola.jpeg" class="img-responsive" alt="">
+            <figcaption>
+              <h2><span>Diego Arreola</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </figcaption>
+            </figure>
+        </div>
+        <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
+          <figure>
+            <img src="img/fotocara.jpg" class="img-responsive" alt="">
+          <figcaption>
+            <h2><span>Diego Alamilla</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </figcaption>
+          </figure>
+      </div>
+      <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15 ">
+        <figure>
+          <img src="img/fotocara.jpg" class="img-responsive" alt="">
+        <figcaption>
+          <h2><span>Abraham Cruz</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </figcaption>
+        </figure>
+    </div>
+        </div>
+      </div>
+    </section>
     <!---->
     <!----> 
     <section id="parallax1" class="home-section parallax text-light" data-stellar-background-ratio="0.5">
@@ -102,70 +158,6 @@
       </div>
     </section>
     <!---->
-    <!----> 
-    <section id="ayuda" class="wow fadeInUp delay-05s">
-      <div class="bg-testicolor">
-        <div class="container section-padding">
-          <div class="row">
-            <div class="testimonial-item">
-              <ul class="bxslider">
-                <li>
-                  <blockquote>
-                    <img src="img/thumb.png" class="img-responsive">
-                    <p>So here is us, on the raggedy edge. Don't push me, and I won't push you.</p>
-                  </blockquote>
-                  <small>John Doe, Client</small>
-                </li>
-                <li>
-                  <blockquote>
-                    <small>Dirección MAC en Windows</small>
-                    <p>
-                      1. Pulse la combinación de teclas <I>Windows + R</I>
-                      <br>
-                      2. En la pestaña de ejecutar escriba "<I>cmd</I> "
-                      <br>
-                      3. Escriba "<I>ipconfig/all</I> " en la linea de comando
-                      <br>
-                      4. Su dirección se encuntra en el apartado "<I>Dirección física</I> "                
-                    </p>
-                  </blockquote>
-                </li>
-                <li>
-                  <blockquote>
-                    <small>Dirección MAC en Mac (Apple)</small>
-                    <p>
-                      1. Abrir el panel de preferencias de red
-                      <br>
-                      2. Ir a la pestaña de "<I>avanzado</I> "
-                      <br>
-                      3. La dirección se encuentra en la pestaña de hardware              
-                    </p>
-                  </blockquote>
-                </li>
-                <li>
-                  <blockquote>
-                    <small>Dirección MAC en Linux</small>
-                    <p>
-                      1. Entrar a la consola del sistema
-                      <br>
-                      2. Escribir "<I>ifconfig</I> "
-                      <br>
-                      3. La dirección se encuentra en el campo "<I>HWaddr</I> "            
-                    </p>
-                  </blockquote>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!---->
-    <section id="blog" class="section-padding wow fadeInUp delay-05s">
-      <div class="container">
-        <!--Sección del Our blog-->
-      </div>
-    </section>
     <!---->
     <section id="contact" class="section-padding wow fadeInUp delay-05s">
       <div class="container">
