--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="text-center">
-              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">We start from pixel perfect pattern</h2>
+              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">¡Automatiza tu pc!</h2>
             </div>
           </div>
         </div>
