--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
     </section>
     <!---->
     <!----> 
-    <section id="parallax1" class="home-section parallax1 text-light" data-stellar-background-ratio="0.5">
+    <section id="parallax1" class="home-section parallax text-light" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
             <div class="text-center">
-              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">¡Automatiza tu pc!</h2>
+              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">Automatiza tu pc!</h2>
             </div>
           </div>
         </div>
