--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </section>
     <!---->
     <!----> 
-    <section id="parallax1" class="home-section" data-stellar-background-ratio="0.5">
+    <section id="parallaxXD" class="home-section parallax text-light section-padding" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
