--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
     <footer id="footer">
       <div class="container">
         <div class="row text-center">
-          <p>&copy; ProOnliPc Theme. All Rights Reserved.</p>
+          <p>&copy; Ouroboros. All Rights Reserved.</p>
           <div class="credits">
-            Designed by <a href="https://www.youtube.com/channel/UCDH0DJaVLkCDtl_YN9hhByw/featured?view_as=subscriber">ProOnliPc</a>
+            <a href="">Designed by JCQ</a>
           </div>
         </div>
       </div>
