--- a/index2.html
+++ b/index2.html
@@ -86,7 +86,7 @@
                 <li>
                   <blockquote>
                   
-                    <p>So here is us, on the raggedy edge. Don't push me, and I won't push you.</p>
+                    <p>¿No sabes de donde sacar tu dirección MAC?</p>
                   </blockquote>
                   
                 </li>
