--- a/index2.html
+++ b/index2.html
@@ -158,22 +158,23 @@
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
   <script type="text/javascript">
-  var macadress = $("#direccionmac");
   
-  function formatMAC(e) {
+  var macAddress = $("#direccionmac");
 
+
+
+function formatMAC(e) {
   var r = /([a-f0-9]{2})([a-f0-9]{2})/i,
-  str = e.target.value.replace(/[^a-f0-9]/ig, "");
-  
-  
+          str = e.target.value.replace(/[^a-f0-9]/ig, "");
+
   while (r.test(str)) {
-      str = str.replace(r, '$1' + '-' + '$2');
-    }
+    str = str.replace(r, '$1' + '-' + '$2');
+  }
 
-    e.target.value = str.slice(0, 17);
-  };
+  e.target.value = str.slice(0, 17);
+};
 
-  macAddress.on("keyup", formatMAC);
+macAddress.on("keyup", formatMAC);
 
 
 
