--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@
      <input type="text" id="device">
       <br>
       <h1>Dirección Mac</h1>
-     <input type="text" id="direccionmac">
+     <input style= "text-transform: uppercase" type="text" id="macaddress">
      <br>
      <br>
       <input type="submit">
@@ -159,7 +159,7 @@
   <script src="contactform/contactform.js"></script>
   <script type="text/javascript">
   
-  var macAddress = $("#direccionmac");
+  var macAddress = $("#macaddress");
 
 
 
