--- a/index2.html
+++ b/index2.html
@@ -157,7 +157,7 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
-  <script type="text/javascript">
+  <script>
   
   var macAddress = $("#macaddress");
 
