--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-
 </head>
 
 <body>
@@ -52,7 +51,7 @@
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="#main-header">Inicio</a></li>
                   <li class=""><a href="#feature">Nosotros</a></li>
-                  <li class=""><a href="#service">Skill</a></li>
+                  <li class=""><a href="#skill">Skill</a></li>
                   <li class=""><a href="#ayuda">Ayuda</a></li>
                   <li class=""><a target="_blank" href="aviso_privacidad.html">Aviso de privacidad</a></li>
                 </ul>
@@ -110,34 +109,34 @@
               <img src="img/fotocara.jpg" class="img-responsive" alt="">
             <figcaption>
               <h2>José de Jesús Chi Quintal</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Descripción</p>
             </figcaption>
             </figure>
         </div>
           <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/arreola.jpeg" class="img-responsive" alt="">
+              <img src="img/darreola.jpeg" class="img-responsive" alt="">
             <figcaption>
               <h2><span>Diego Arreola</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Descripción</p>
             </figcaption>
             </figure>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
           <figure>
-            <img src="img/fotocara.jpg" class="img-responsive" alt="">
+            <img src="img/dalamilla.jpeg" class="img-responsive" alt="">
           <figcaption>
             <h2><span>Diego Alamilla</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Futuro Ingeniero de Software</p>
           </figcaption>
           </figure>
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15 ">
         <figure>
-          <img src="img/fotocara.jpg" class="img-responsive" alt="">
+          <img src="img/abraham.jpeg" class="img-responsive" alt="">
         <figcaption>
           <h2><span>Abraham Cruz</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Descripción</p>
         </figcaption>
         </figure>
     </div>
@@ -146,7 +145,7 @@
     </section>
     <!---->
     <!----> 
-    <section class="parallax1 home-section parallax text-light section-padding" data-stellar-background-ratio="0.5">
+    <section id="skill" class="parallax1 home-section parallax text-light section-padding" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
