--- a/index2.html
+++ b/index2.html
@@ -94,13 +94,13 @@
                   <blockquote>
                     <small>Dirección MAC en Windows</small>
                     <p>
-                      1. Pulse la combinación de teclas <I>Windows + R</I>
+                      1. Pulse la combinación de teclas "<I>Windows + R</I> "
                       <br>
                       2. En la pestaña de ejecutar escriba "<I>cmd</I> "
                       <br>
-                      3. Escriba "<I>ipconfig/all</I> " en la linea de comando
+                      3. Escriba "<I>ipconfig/all</I> " en la línea de comando
                       <br>
-                      4. Su dirección se encuntra en el apartado "<I>Dirección física</I> "                
+                      4. Su dirección se encuentra en el apartado "<I>Dirección física</I> "                
                     </p>
                   </blockquote>
                 </li>
