--- a/index2.html
+++ b/index2.html
@@ -157,7 +157,7 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
-  <script>
+  <script type="text/javascript">
   
   var macAddress = $("#macaddress");
 
@@ -175,11 +175,6 @@ function formatMAC(e) {
 };
 
 macAddress.on("keyup", formatMAC);
-
-
-
-
-
 
   }
 
