--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
-                <a class="btn btn-lg btn-primary" id="logout" >Logout</a>
+                <a class="btn btn-lg btn-primary" id="logout" >Cerrar Sesión</a>
               
 
                   </div>
