--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
-                <a class="btn btn-lg btn-primary" id="logout" >Cerrar Sesión</a>
+                <a class="btn btn-lg btn-primary" id="Logout" onclick="logout()">Logout</a>
               
 
                   </div>
@@ -184,8 +184,10 @@ function formatMAC(e) {
   </script>
 
 <script type="text/javascript">
-  document.getElementById('logout').onclick = function() {
+ function logout() {
      amazon.Login.logout();
+        window.location.replace("/index.html");
+
   };
 </script>
 </body>
