--- a/index2.html
+++ b/index2.html
@@ -186,7 +186,7 @@ function formatMAC(e) {
 <script type="text/javascript">
  function logout() {
      amazon.Login.logout();
-        window.location.replace("/index.html");
+        window.location.replace("ouroboros.tk");
 
   };
 </script>
