--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
-                <a class="btn btn-lg btn-primary" id="Logout">Logout</a>
+                <a class="btn btn-lg btn-primary" id="Logout">Cerrar Sesión</a>
               
 
                   </div>
@@ -186,7 +186,7 @@ function formatMAC(e) {
  <script type="text/javascript">
   document.getElementById('Logout').onclick = function() {
      amazon.Login.logout();
-     window.location.replace("https://ouroboroswol.tk/");
+     window.location.replace("https://ouroboroswol.tk/index.html");
   };
 </script>
 </body>
