--- a/index2.html
+++ b/index2.html
@@ -186,7 +186,7 @@ function formatMAC(e) {
  <script type="text/javascript">
   document.getElementById('Logout').onclick = function() {
      amazon.Login.logout();
-     window.location.replace("https://ouroboroswol.tk/index.html");
+     window.location.replace("/index.html");
   };
 </script>
 </body>
