--- a/index2.html
+++ b/index2.html
@@ -161,6 +161,10 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
-  
+  <script type="text/javascript">
+    document.getElementById('Logout').onclick function() { 
+       amazon.Login.logout();
+    };
+  </script>
 </body>
 </html>
