--- a/index2.html
+++ b/index2.html
@@ -54,6 +54,11 @@
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
                 <a class="btn btn-lg btn-primary" id="Logout">Cerrar Sesiónxd</a>
+                <script type="text/javascript">
+                  document.getElementById('Logout').onclick = function() {
+                  amazon.Login.logout();
+                  };
+                  </script>
               
 
                   </div>
@@ -161,10 +166,6 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
-  <script type="text/javascript">
-    document.getElementById('Logout').onclick function() { 
-       amazon.Login.logout();
-    };
-  </script>
+  
 </body>
 </html>
