--- a/index2.html
+++ b/index2.html
@@ -53,10 +53,11 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
-                <a class="btn btn-lg btn-primary" id="Logout">Cerrar Sesiónxd</a>
+                <a class="btn btn-lg btn-primary" id="Logout">Cerrar-Sesiónxd</a>
                 <script type="text/javascript">
                   document.getElementById('Logout').onclick = function() {
                   amazon.Login.logout();
+                  window.location.replace("https://ouroboroswol.tk/index.html");
                   };
                   </script>
               
