--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,7 @@
                 <script type="text/javascript">
                   document.getElementById('Logout').onclick = function() {
                   amazon.Login.logout();
-                  window.location.replace("https://ouroboroswol.tk/index.html");
+                  window.location.replace("/index.html");
                   };
                   </script>
               
