--- a/index2.html
+++ b/index2.html
@@ -155,7 +155,7 @@
   <script type="text/javascript">
     document.getElementById('Logout').onclick = function() {
     amazon.Login.logout();
-    window.location.replace("https://ouroboroswol.tk/index.html");
+    window.location.replace('https://developer.mozilla.org/en-US/docs/Web/API/Location.reload');
     };
     </script>
   <script src="js/jquery.min.js"></script>
