--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,19 @@
 </head>
 
 <body>
-  
+  <div id="amazon-root"></div>
+ <script type="text/javascript">
+
+    window.onAmazonLoginReady = function() {
+      amazon.Login.setClientId('amzn1.application-oa2-client.6a0f56640b804aaab2c800fd81313905');
+    };
+    (function(d) {
+      var a = d.createElement('script'); a.type = 'text/javascript';
+      a.async = true; a.id = 'amazon-login-sdk';
+      a.src = 'https://assets.loginwithamazon.com/sdk/na/login1.js';
+      d.getElementById('amazon-root').appendChild(a);
+    })(document);
+</script>
 
   
   <div class="loader"></div>
@@ -155,7 +167,7 @@
   <script type="text/javascript">
     document.getElementById('Logout').onclick = function() {
     amazon.Login.logout();
-    window.location.replace('https://developer.mozilla.org/en-US/docs/Web/API/Location.reload');
+    window.location.replace('/index.html');
     };
     </script>
   <script src="js/jquery.min.js"></script>
