--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       </div>
           <div class="col-md-3 col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
             <figure>
-              <img src="img/fotocara.jpg" class="img-responsive" alt="">
+              <img src="img/jose.jpeg" class="img-responsive" alt="">
             <figcaption>
               <h2>José de Jesús Chi Quintal</h2>
               <p>Descripción</p>
@@ -150,7 +150,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="text-center">
-              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">Automatiza tu pc!</h2>
+              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">¡Automatiza tu pc!</h2>
             </div>
           </div>
         </div>
