--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                   <li class="active"><a href="#main-header">Inicio</a></li>
                   <li class=""><a href="#feature">Nosotros</a></li>
                   <li class=""><a href="#skill">Skill</a></li>
-                  <li class=""><a href="#ayuda">Ayuda</a></li>
                   <li class=""><a target="_blank" href="aviso_privacidad.html">Aviso de privacidad</a></li>
                 </ul>
               </div>
@@ -64,6 +63,7 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
+                <br><br>
                   <a href id="LoginWithAmazon">
                     <img border ="0" alt="Login with Amazon"
                         src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
@@ -150,7 +150,7 @@
         <div class="row">
           <div class="col-md-12">
             <div class="text-center">
-              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">¡Automatiza tu pc!</h2>
+              <h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">¡Automatiza tu PC!</h2>
             </div>
           </div>
         </div>
