--- a/index2.html
+++ b/index2.html
@@ -52,8 +52,7 @@
               <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                   <li class="active"><a href="#main-header">Inicio</a></li>
-                  <li class=""><a href="#feature">Nosotros</a></li>
-                  <li class=""><a href="#service">Skill</a></li>
+                  <li class=""><a href="#mac">Dirección MAC</a></li>
                   <li class=""><a href="#ayuda">Ayuda</a></li>
                 </ul>
               </div>
@@ -65,7 +64,8 @@
             <div class="row">
               <div class="banner-info text-center wow fadeIn delay-05s">
                 <h1 class="bnr-title">Alexa Skill Wake on Lan</h1>
-                <a class="btn btn-lg btn-primary" id="Logout">Cerrar-Sesiónxd</a>
+                <br><br>
+                <a class="btn btn-lg btn-primary" id="Logout">Cerrar sesión</a>
                   </div>
             </div>
           </div>
@@ -74,12 +74,12 @@
     </div>
     <!---->
     <!----> 
-    <section  class="direcciones">
+    <section  id="mac" class="direcciones">
       <div class="contenedor">
      <h1>Nombre del dispositivo</h1>
      <input type="text" id="device">
       <br>
-      <h1>Dirección Mac</h1>
+      <h1>Dirección MAC</h1>
      <input style= "text-transform: uppercase" type="text" id="macaddress">
      <br>
      <br>
