--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <img src="img/pablo.jpeg" class="img-responsive" alt="">
           <figcaption>
             <h2>Pablo Gamboa</h2>
-            <p>Estudiante de primer semestre de la Licenciatura en Ingeniería de Software, Miembro del equipo mas verga de cambranes, apasionado por el deporte y la programación.</p>
+            <p>Estudiante de primer semestre de la Licenciatura en Ingeniería de Software, apasionado por el deporte y la programación.</p>
           </figcaption>
           </figure>
       </div>
