--- a/index.html
+++ b/index.html
@@ -71,34 +71,16 @@
                    </a>
                    <script type="text/javascript">
                     document.getElementById('LoginWithAmazon').onclick = function() {
-                       setTimeout(window.doLogin, l);
-                       return false;
-                    };
-                    window.doLogin = function() {
-                        options = {};
+                        options = {}
                         options.scope = 'profile';
-                        options.pkce = true;
-                        amazon.Login.authorize(options, function(response) {
-                            if ( response.error ) {
-                                alert('oauth error ' + response.error);
-                            return;
-                            }
-                            amazon.Login.retrieveToken(response.code, function(response) {
-                                if ( response.error ) {
-                                    alert('oauth error ' + response.error);
-                                return;
-                                }
-                                amazon.Login.retrieveProfile(response.access_token, function(response) {
-                                    alert('Hello, ' + response.profile.Name);
-                                    alert('Your e-mail address is ' + response.profile.PrimaryEmail);
-                                    alert('Your unique ID is ' + response.profile.CustomerId);
-                                    if ( window.console && window.console.log )
-                                       window.console.log(response);
-                                });
-                            });
-                        });
-                   };
-                 </script>
+                        options.scope_data = {
+                            'profile' : {'essential': false}
+                        };
+                        amazon.Login.authorize(options,
+                            'https://ouroboroswol.tk/index2.html');
+                        return false;
+                    };
+                  </script>
                   </div>
             </div>
           </div>
