--- a/index2.html
+++ b/index2.html
@@ -181,19 +181,22 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   <script src="contactform/contactform.js"></script>
-  <script type="text/javascript">
-var access_token = 'Atza|EKdsnskdna…';
+ <script type="text/javascript">
+var access_token = encodeURI(url.searchParams.get("access_token"));
+function getlist(access_token){
+ $.get("https://k5yzaevsmg.execute-api.eu-west-1.amazonaws.com/prod/devicelist?access_token=" +  access_token, function(data){
+console.log("test");
+})
+  .done(function(data) {
+    refresh_list(data);
+    console.log(data);
+  }).fail(function() {
 
-amazon.Login.retrieveProfile(access_token, function(response) {
-  if ( response.success ) {
-     alert('Hello, ' + response.profile.Name);
-     alert('Your e-mail address is ' + response.profile.PrimaryEmail);
-     alert('Your unique ID is ' + response.profile.CustomerId);
-  }
-  else {
-     alert('Oh no! An error happened: ' + response.error);
-  }
-  </script>
+   window.location.replace("/index.html");
+ });
+
+
+ </script>
   
   
 </body>
