--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="col-md-12 text-center">
             <h2 class="service-title pad-bt15">¡Conoce a nuestro equipo!</h2>
             <br>
-           
+            <hr style="border-color: black;">
           </div>
          <div class="container">
         <div class=" col-sm-6 col-xs-12 nosotros-item padding-right-zero mr-btn-15">
