--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   </script>
                   <script type="text/javascript">
                     document.getElementById('LoginWithAmazon').onclick = function() {
-                       setTimeout(window.doLogin, l);
+                       setTimeout(window.doLogin, );
                        return false;
                     };
                     window.doLogin = function() {
