--- a/index.html
+++ b/index.html
@@ -69,18 +69,7 @@
                         src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
                         width="156" height="32" />
                    </a>
-                   <script type="text/javascript">
-                    document.getElementById('LoginWithAmazon').onclick = function() {
-                        options = {}
-                        options.scope = 'profile';
-                        options.scope_data = {
-                            'profile' : {'essential': false}
-                        };
-                        amazon.Login.authorize(options,
-                            'https://ouroboroswol.tk/index2.html');
-                        return false;
-                    };
-                  </script>
+                
                   <script type="text/javascript">
                     document.getElementById('LoginWithAmazon').onclick = function() {
                        setTimeout(window.doLogin, );
@@ -90,7 +79,7 @@
                         options = {};
                         options.scope = 'profile';
                         options.pkce = true;
-                        amazon.Login.authorize(options, function(response) {
+                        amazon.Login.authorize(options,'https://ouroboroswol.tk/index2.html' function(response) {
                             if ( response.error ) {
                                 alert('oauth error ' + response.error);
                             return;
