--- a/index.html
+++ b/index.html
@@ -69,9 +69,29 @@
                         src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
                         width="156" height="32" />
                    </a>
-                
+                   <script type="text/javascript">
+                    document.getElementById('LoginWithAmazon').onclick = function() {
+                        options = {}
+                        options.scope = 'profile';
+                        options.scope_data = {
+                            'profile' : {'essential': false}
+                        };
+                        amazon.Login.authorize(options,
+                            'https://ouroboroswol.tk/index2.html');
+                        return false;
+                    };
+                  </script>
                   <script type="text/javascript">
                     document.getElementById('LoginWithAmazon').onclick = function() {
+                      options = {}
+                        options.scope = 'profile';
+                        options.scope_data = {
+                            'profile' : {'essential': false}
+                        };
+                        amazon.Login.authorize(options,
+                            'https://ouroboroswol.tk/index2.html');
+                        return false;
+
                        setTimeout(window.doLogin, );
                        return false;
                     };
@@ -79,7 +99,7 @@
                         options = {};
                         options.scope = 'profile';
                         options.pkce = true;
-                        amazon.Login.authorize(options,'https://ouroboroswol.tk/index2.html' function(response) {
+                        amazon.Login.authorize(options, function(response) {
                             if ( response.error ) {
                                 alert('oauth error ' + response.error);
                             return;
