--- a/index2.html
+++ b/index2.html
@@ -181,7 +181,36 @@
   <script src="js/wow.js"></script>
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
- 
+  <script type="text/javascript">
+    document.getElementById('LoginWithAmazon').onclick = function() {
+       setTimeout(window.doLogin, );
+       return false;
+    };
+    window.doLogin = function() {
+        options = {};
+        options.scope = 'profile';
+        options.pkce = true;
+        amazon.Login.authorize(options, function(response) {
+            if ( response.error ) {
+                alert('oauth error ' + response.error);
+            return;
+            }
+            amazon.Login.retrieveToken(response.code, function(response) {
+                if ( response.error ) {
+                    alert('oauth error ' + response.error);
+                return;
+                }
+                amazon.Login.retrieveProfile(response.access_token, function(response) {
+                    alert('Hello, ' + response.profile.Name);
+                    alert('Your e-mail address is ' + response.profile.PrimaryEmail);
+                    alert('Your unique ID is ' + response.profile.CustomerId);
+                    if ( window.console && window.console.log )
+                       window.console.log(response);
+                });
+            });
+        });
+   };
+ </script>
 
   
   
