--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+  
   <div id="amazon-root"></div>
  <script type="text/javascript">
 
@@ -28,8 +29,7 @@
       a.async = true; a.id = 'amazon-login-sdk';
       a.src = 'https://assets.loginwithamazon.com/sdk/na/login1.js';
       d.getElementById('amazon-root').appendChild(a);
-    })(document);
-
+    })(document)
 </script>
   <div class="loader"></div>
   <div id="myDiv">
@@ -69,19 +69,6 @@
                         src="https://images-na.ssl-images-amazon.com/images/G/01/lwa/btnLWA_gold_156x32.png"
                         width="156" height="32" />
                    </a>
-                   <script type="text/javascript">
-                    document.getElementById('LoginWithAmazon').onclick = function() {
-                        options = {}
-                        options.scope = 'profile';
-                        options.scope_data = {
-                            'profile' : {'essential': false}
-                        };
-                        amazon.Login.authorize(options,
-                            'https://ouroboroswol.tk/index2.html');
-                        return false;
-                    };
-                  </script>
-                  
                   <script type="text/javascript">
                     document.getElementById('LoginWithAmazon').onclick = function() {
                        setTimeout(window.doLogin, );
@@ -112,6 +99,19 @@
                         });
                    };
                  </script>
+
+<script type="text/javascript">
+  document.getElementById('LoginWithAmazon').onclick = function() {
+      options = {}
+      options.scope = 'profile';
+      options.scope_data = {
+          'profile' : {'essential': false}
+      };
+      amazon.Login.authorize(options,
+          'https://ouroboroswol.tk/index2.html');
+      return false;
+  };
+</script>
                   </div>
             </div>
           </div>
