--- a/index2.html
+++ b/index2.html
@@ -181,8 +181,22 @@
   <script src="js/wow.js"></script>
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
- 
+  <script>
 
+  amazon.Login.retrieveToken(response.code, function(response) {
+    if ( response.error ) {
+        alert('oauth error ' + response.error);
+    return;
+    }
+    amazon.Login.retrieveProfile(response.access_token, function(response) {
+        alert('Hello, ' + response.profile.Name);
+        alert('Your e-mail address is ' + response.profile.PrimaryEmail);
+        alert('Your unique ID is ' + response.profile.CustomerId);
+        if ( window.console && window.console.log )
+           window.console.log(response);
+    });
+});
+</script>
   
   
 </body>
