--- a/index2.html
+++ b/index2.html
@@ -86,9 +86,9 @@
      <br>
      <br>
       <input type="submit">
+      <br><br><br><br>
      </div>
      </section>
-     <br><br><br>
     <!---->
     <!----> 
     <section id="ayuda" class="wow fadeInUp delay-05s">
@@ -99,8 +99,8 @@
               <ul class="bxslider">
                 <li>
                   <blockquote>
-                    <small> <b>¿No sabes dónde obtener tu dirección MAC?</b></small>
-                    <br><br><br><br>
+                    <small> <b>¿No sabes dónde obtener tu dirección MAC?</b><br><br>Aquí te podemos ayudar</small>
+                    <br><br><br>
                     <p>
                       <I>Desplázate con los botones de abajo</I>
                     </p>
