--- a/index2.html
+++ b/index2.html
@@ -99,7 +99,7 @@
               <ul class="bxslider">
                 <li>
                   <blockquote>
-                    <small> <b>¿No sabes dónde obtener tu dirección MAC?</b><br><br>Aquí te podemos ayudar</small>
+                    <small> <b>¿No sabes dónde obtener tu dirección MAC?</b><br><br>Aquí te podemos ayudar :)</small>
                     <br><br><br>
                     <p>
                       <I>Desplázate con los botones de abajo</I>
