--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <img src="img/jose.jpeg" class="img-responsive" alt="">
             <figcaption>
               <h2>José de Jesús Chi Quintal</h2>
-              <p>Descripción</p>
+              <p>Estudiante de la Licenciatura en Ingeniería de Software</p>
             </figcaption>
             </figure>
         </div>
@@ -154,7 +154,7 @@
               <img src="img/darreola.jpeg" class="img-responsive" alt="">
             <figcaption>
               <h2><span>Diego Arreola</h2>
-              <p>Descripción</p>
+              <p>Estudiante de la Licenciatura en Ingeniería de Software</p>
             </figcaption>
             </figure>
         </div>
@@ -172,7 +172,7 @@
           <img src="img/abraham.jpeg" class="img-responsive" alt="">
         <figcaption>
           <h2><span>Abraham Cruz</h2>
-          <p>Descripción</p>
+          <p>Estudiante de la Licenciatura en Ingeniería de Software</p>
         </figcaption>
         </figure>
     </div>
@@ -214,6 +214,5 @@
   <script src="js/jquery.bxslider.min.js"></script>
   <script src="js/custom.js"></script>
   
-
 </body>
 </html>
